# AskRag

./: .dockerignore  .gitignore  Dockerfile  README.md  RUN_GUIDE.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: app.py  main.py
core/: __init__.py  config.py  embedding_service.py  llm_service.py  opendomain.py  vector_store.py
data/raw/: .gitkeep
docs/: DEPLOYMENT.md  QUICKSTART.md  README.md
